--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,6 +37,7 @@ body{
         width: 125px;
         height: 50.1px;
         margin-left: 300px;
+        margin-top: 30px;
         
         }
 }
