--- a/src/styles/globalstyles.css
+++ b/src/styles/globalstyles.css
@@ -1,12 +1,12 @@
-:root{
-    --font-site:'IBM Plex Sans';
-    --cor-1:#ADB5BD;
-    --background-1:#343A40;
-    --color-2:#DEE2E6;
-    --background-2:#4C6EF5;
-    --background-3:#343A40;
-    --color-3:#CED4DA;
-    --color-4:#7C8B99;
-    --espessura-textos:500;
-    --border-radius-site:8px;
+:root {
+  --font-site: "IBM Plex Sans";
+  --cor-1: #adb5bd;
+  --background-1: #343a40;
+  --color-2: #dee2e6;
+  --background-2: #4c6ef5;
+  --background-3: #343a40;
+  --color-3: #ced4da;
+  --color-4: #7c8b99;
+  --espessura-textos: 500;
+  --border-radius-site: 8px;
 }
