--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,15 +8,16 @@ header{
   font-weight: var(--espessura-textos);
   font-size: 20px;
   line-height: 26px;
-  margin-right:25px;
+  margin-right:0px;
   margin:0 auto;
+ 
   /* identical to box height */
 
   color: var(--cor-1);
 }
 @media(min-width:750px){
   #loading{
-    margin-left:-65px;
+    margin:0 auto;
   }
 }
 .hidden {
